change div container of navigation to nav. Add classes to links.  Add styles to nav button, positioning it and create animation by @keyframes and add rules of navigation to button and add visibility (z-index). Add position fixed to navigation and set it, add bacground. Styles list and links.

--- a/css/main.css
+++ b/css/main.css
@@ -87,4 +87,46 @@ body{
   background: rgba(245, 243, 245, 0.3);
   z-index: 2;
 }
+/* nav */
+.navBtn {
+  position: fixed;
+  top: 5%;
+  right: 5%;
+  font-size: 3rem;
+  color: var(--yellow);
+  z-index: 3;
+  cursor: pointer;
+  animation: pulse;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+@keyframes pulse {
+  0%{
+    transform: scale(1.0);
+  }
+  50%{
+    transform: scale(1.5);
+  }
+  100%{
+    transform: scale(1.0);
 
+  }
+}
+.nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background: rgba(255,201,20,0.5);
+  z-index: 4;
+}
+.nav__links {
+  list-style-type: none;
+}
+.nav__single-link {
+  display: block;
+  text-decoration: none;
+  color: var(--black);
+  font-size: 1.5rem;
+  padding: 0.5rem 1rem;
+}
